add post detail page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,6 +26,10 @@
     -->
     <title>React App</title>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script 
+      type="text/javascript" 
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=198b96fe381da76db9d1c67410e69b3d&libraries=services&autoload=false"
+    ></script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
